# watermark

./: .gitignore  .npmrc  .release-please-config.json  CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
.github/workflows/: build.yaml  preview.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: blind_watermark.rs  lib.rs
crates/core/tests/: blind_watermark_test.rs
scripts/: sync-npm-dirs.cjs
src/: App.tsx  algorithm.rs  index.css  lib.rs  main.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CanvasViewer.tsx  EmbedControls.tsx  ExtractControls.tsx  ImageSection.tsx  ImageUploader.tsx  ResultDisplay.tsx
src/utils/: fileInfo.ts
