[package]
name = "dwt_watermark"
version = "1.0.11"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(windows)'.dependencies]
rfd = "0.17.2"
windows = { version = "0.62.2", features = ["ApplicationModel_DataTransfer", "Storage", "Storage_Pickers", "Storage_Streams", "Graphics_Imaging", "Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Console", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse"] }
windows-core = "0.62.2"
winio = { version = "0.11.0", default-features = false, features = ["winui"] }
winui3 = { version = "0.3.8", package = "winio-winui3", features = ["UI_Xaml", "UI_Xaml_Controls", "UI_Xaml_Input", "UI_Xaml_Markup", "UI_Xaml_Media"] }

[dependencies]
rayon = "1.10.0"
md5 = "0.8.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp"] }
napi = { version = "3.8.3", default-features = false, features = ["napi4"] }
napi-derive = "3.5.2"
chrono = "0.4.42"
serde_json = "1.0.145"

[build-dependencies]
napi-build = "2.1.4"

[[bin]]
name = "dwt_watermark"
path = "src/main.rs"
required-features = ["gui"]

[features]
gui = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"