[package]
name = "dwt-watermark-napi"
version = "1.1.3"
edition = "2024"

[workspace]
members = ["crates/core", "src-tauri"]
resolver = "2"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
dwt-watermark-core = { path = "crates/core" }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp"] }
napi = { version = "3.8.3", default-features = false, features = ["napi4"] }
napi-derive = "3.5.2"

[build-dependencies]
napi-build = "2.1.4"
