[package]
name = "watermark-tool"
version = "1.1.5"
edition = "2024"

[lib]
name = "dwt_watermark_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "watermark-tool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dwt-watermark-core = { path = "../crates/core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
